@@ -5,18 +5,21 @@
       <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
       <div id="html5_player"></div>
       <script>
-        <% if is_mobile? %>
+        <% if @item.youtube_res.present? %>
+          var custom_width = "360";
+          var custom_height = "240";
+        <% elsif is_mobile? %>
           // if we are mobile, show smaller resolution video
           var custom_width = "360";
           var custom_height = "240";
         <% else %>
           // if Tablet or Desktop the show larger resolution video
           if (Modernizr.mq('only screen and (min-width:1600px)')) {
-            var custom_width = "1100";
-            var custom_height = "760";
+            var custom_width = "800";
+            var custom_height = "600";
           } else if (Modernizr.mq('only screen and (min-width:1200px)')) {
-            var custom_width = "760";
-            var custom_height = "520";
+            var custom_width = "720";
+            var custom_height = "480";
           } else if (Modernizr.mq('only screen and (min-width:960px)')) {
             var custom_width = "540";
             var custom_height = "400";
